# mlx

./: .env.dist  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: roadmap.md
mlx/: __main__.py  cli.py  utils.py
mlx/modules/: base_agent.py  chat.py  data_builder.py  ic_one_shot.py  open_ai_agent.py
mlx/modules/datasets/: one_shot_pair_dataset.py
mlx/modules/ic/: base_ic_one_shot_model.py  siamese_le_net.py
mlx/modules/rag/: run.py
mlx/modules/tools/: web_fetcher.py
notebooks/: colab_obj_detect.ipynb
